# halocli

./: .gitignore  CHANGELOG.md  FRIDAY_PRESENT.md  MANIFEST.in  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml  release.yml
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css
src/halocli/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  discovery.py  errors.py  models.py  output.py  resources.py  todo.py  todo_web.py  token_cache.py  utils.py
src/halocli/web_static/: index.html
src/halocli/web_static/assets/: index-0elXQOnn.css  index-BdlrrfrQ.js  index-BtClEaws.js  index-CyFI0t19.js  index-oM2j46sw.css
tests/: test_auth_modes.py  test_cli.py  test_client.py  test_config.py  test_discovery.py  test_resources.py  test_todo.py  test_todo_web.py  test_token_cache.py  test_utils.py
